# eScraper

./: .gitignore  Cargo.toml  meta_schema.json
src/: main.rs  structs.rs
