[package]
name = "eScraper"
version = "0.1.0"
edition = "2024"

[dependencies]
rs621 = "0.6.0"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"]}
futures = "0.3.31"
reqwest = { version = "0.12.15", features = ["stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.40"
anyhow = "1.0.98"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
clap = { version = "4.5.37", features = ["derive"] }

[profile.release]
lto = "fat"
